[tool.poetry]
name = "tug-serverless"
version = "0.1"
description = ""
authors = ["Gabriele <gabriele@magicblock.gg>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "1.13.5"
fastapi = "0.92.0"
uvicorn = "0.13.4"
mangum = "0.17.0"
requests = "^2.26.0"
httpx = "^0.23.3"
solana = "^0.29.1"
base58 = "2.1.1"
cryptography = "35.0.0"
numpy = "^1.24.2"
borsh-construct = "^0.1.0"
anchorpy = "^0.16.0"
pillow = "^10.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
coverage = "5.5"
bandit = "1.6.2"
pylint = "^2.17.0"
black = "20.8b1"
isort = "^5.12.0"
pytest-cov = "2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
